--- a/src/pages/about/AboutEdu.scss
+++ b/src/pages/about/AboutEdu.scss
@@ -27,6 +27,10 @@
   z-index: 1;
   color: #000;
   font-weight: 600;
+
+  @media (max-width: 960px) {
+    font-size: 20px;
+  }
 }
 
 .edu-wrapper {
@@ -44,8 +48,8 @@
   width: 200px;
   font-family: "MyFont", sans-serif;
   width: 25%;
-  
-  @media (max-width : 920px) {
+
+  @media (max-width: 920px) {
     text-align: left;
   }
 }
@@ -81,7 +85,7 @@
   align-items: start;
   width: 55%;
 
-  @media (max-width : 920px) {
+  @media (max-width: 920px) {
     text-align: left;
   }
 
@@ -90,14 +94,13 @@
     line-height: 50px;
     font-weight: 600;
     font-size: 2.4vw;
-    color : #000;
+    color: #000;
 
-    @media (max-width : 920px) {
+    @media (max-width: 920px) {
       font-size: 20px;
       line-height: 20px;
       margin-bottom: 20px;
     }
-
   }
 
   h3 {
@@ -107,7 +110,7 @@
     margin-bottom: 20px;
     font-weight: 400;
 
-    @media (max-width : 920px) {
+    @media (max-width: 920px) {
       font-weight: 500;
       line-height: 20px;
       font-size: 15px;
@@ -131,6 +134,6 @@
 }
 
 .edu-r-point {
-    margin-bottom: 20px;
-    text-align: left;
+  margin-bottom: 20px;
+  text-align: left;
 }
