--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,80 +1,150 @@
-.header-wrapper {
-  width: 100%;
+.Navbar {
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3% 7%;
-  position: fixed;
-  background-color: transparent;
-  z-index: 999;
+  background: black;
+  position: absolute;
+  width: 100%;
+  padding: 0px 20px;
+  background: transparent;
 }
 
-.left-header > h1 {
-  font-size: 30px;
+.Navbar > .nav-logo {
+  font-weight: 700;
+  font-size: 25px;
+  margin: 15px;
+  color: black;
+}
+
+.Navbar > .nav-items > a {
+  color: black;
+  font-size: 16px;
+  text-decoration: none;
+  margin: 15px;
+  position: relative;
+  opacity: 0.9;
+  font-weight: 600;
   cursor: pointer;
 }
 
-.right-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.Navbar > .nav-items > a:hover {
+  opacity: 1;
+}
 
-  @media (max-width: 960px) {
+.Navbar > .nav-items > a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background: black;
+  transition: all 0.45s;
+  bottom: -10px;
+}
+
+.Navbar > .nav-items > a:hover::before {
+  width: 100%;
+}
+
+.Navbar > .nav-toggle {
+  display: none;
+  z-index: 99999999;
+}
+
+.footer-m-nav {
+  display: none;
+
+  @media (max-width: 700px) {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 3rem;
-    background: wheat;
-    right: 0;
-    top: 0;
+    margin-top: 50px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .Navbar > .nav-items {
     position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    background: black;
+    left: 0;
+    width: 100%;
     height: 100vh;
-    width: 100vw;
-    z-index: 99;
+    transform: translateX(-100%);
+    transition: all 0.45s;
+    overflow: hidden;
+    color: #ffffff;
+    z-index: 99999;
+    justify-content: center;
+    align-items: center;padding-top: 70px;
   }
-}
 
-.right-header > li {
-  list-style: none;
-}
-
-.right-header > li > a {
-  text-decoration: none;
-  color: #000000;
-  margin: 0px 30px;
-  font-size: 15px;
-  font-weight: 600;
-}
-
-.right-menu {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 1rem;
-}
-
-.menu {
-  display: none;
-  z-index: 999;
-  width: 2rem;
-  height: 2rem;
-
-  @media (max-width: 961px) {
-    display: inline;
+  .Navbar > .nav-items > a {
+    color: white;
+    
   }
-}
 
-#Arrow {
-  background-color: black;
-  color: #ffbe0b;
-  border-radius: 5px;
-  font-size: 5vh;
-  padding: 5px;
-  margin-left: 20px;
-  display: none;
-  @media (max-width: 961px) {
-    display: none;
+  .Navbar > .nav-items > a::before {
+    background: white;
+
+  }
+
+  .Navbar > .nav-items.open {
+    transform: translateX(0);
+  }
+
+  .Navbar > .nav-toggle {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .nav-toggle > .bar {
+    position: relative;
+    width: 32px;
+    height: 2px;
+    background: black;
+    transition: all 0.45s ease-in-out;
+  }
+
+  .nav-toggle > .bar::before,
+  .nav-toggle > .bar::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background: #ffffff;
+    border-radius: 2px;
+    transition: all 0.45s ease-in-out;
+  }
+
+  .nav-toggle > .bar::before {
+    width: 25px;
+    transform: translateY(-8px);
+    right: 0;
+  }
+
+  .nav-toggle > .bar::after {
+    width: 32px;
+    transform: translateY(8px);
+  }
+
+  .nav-toggle.open > .bar {
+    transform: translateX(-40px);
+    background: transparent;
+  }
+
+  .nav-toggle.open > .bar::before {
+    width: 32px;
+    transform: rotate(45deg) translate(26px, -26px);
+  }
+
+  .nav-toggle.open > .bar::after {
+    transform: rotate(-45deg) translate(26px, 26px);
   }
 }
