--- a/src/pages/Developer/DeveloperEnd.scss
+++ b/src/pages/Developer/DeveloperEnd.scss
@@ -36,6 +36,10 @@
   line-height: 1;
   margin-bottom: 5vw;
   letter-spacing: -0.5px;
+
+  @media (max-width : 900px) {
+    font-size: 5vw;
+  }
 }
 
 .dev-btn-container {
