--- a/src/pages/about/AboutEnd.scss
+++ b/src/pages/about/AboutEnd.scss
@@ -37,6 +37,10 @@
   line-height: 1;
   margin-bottom: 5vw;
   letter-spacing: -0.5px;
+
+  @media (max-width : 900px) {
+    font-size: 5vw;
+  }
 }
 
 .abt-btn-container {
