--- a/src/pages/Developer/Developer.scss
+++ b/src/pages/Developer/Developer.scss
@@ -41,6 +41,11 @@
   color: #000;
   letter-spacing: -1px;
   margin-top: 3rem;
+
+  @media (max-width: 500px) {
+    font-size: 6vw;
+    margin-top: -250px;
+  }
 }
 
 .toolsiconcontainer {
@@ -125,6 +130,11 @@
   font-weight: 400;
   color: #000;
   letter-spacing: -1px;
+
+  @media (max-width: 500px) {
+    font-size: 7vw;
+    margin-top: -400px;
+  }
 }
 
 .toolsiconcontainerdev {
