--- a/src/pages/Developer/DeveloperIntro.scss
+++ b/src/pages/Developer/DeveloperIntro.scss
@@ -39,6 +39,11 @@
   @media (max-width: 650px) {
     font-size: 5vw;
   }
+
+  @media (max-width: 500px) {
+    font-size: 7vw;
+    margin-top: -650px;
+  }
 }
 
 .dev-intro-head {
@@ -65,6 +70,10 @@
   @media (max-width: 650px) {
     font-size: 6.5vw;
   }
+
+  @media (max-width: 500px) {
+    font-size: 7vw;
+  }
 }
 
 .dev-intro-desc {
@@ -86,5 +95,9 @@
 
   @media (max-width: 650px) {
     font-size: 3vw;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 5vw;
   }
 }
