--- a/src/pages/projects/ProjectIntro.scss
+++ b/src/pages/projects/ProjectIntro.scss
@@ -39,6 +39,11 @@
   @media (max-width: 650px) {
     font-size: 5vw;
   }
+
+  @media (max-width: 500px) {
+    font-size: 7vw;
+    margin-top: -300px;
+  }
 }
 
 .pr-intro-head {
@@ -50,8 +55,7 @@
   z-index: 1;
   color: #000;
   letter-spacing: -1px;
-  margin-bottom: 10vh;
-
+  margin-bottom: 20px;
 
   @media (max-width: 1220px) {
     font-size: 4vw;
@@ -86,5 +90,8 @@
 
   @media (max-width: 650px) {
     font-size: 3vw;
+  }
+  @media (max-width: 500px) {
+    font-size: 5vw;
   }
 }
