--- a/src/pages/projects/ProjectPage.scss
+++ b/src/pages/projects/ProjectPage.scss
@@ -34,6 +34,10 @@
   @media (max-width: 960px) {
     font-size: 20px;
   }
+  @media (max-width: 500px) {
+    font-size: 25px;
+  }
+
 }
 
 .pr-ps-page-wrapper {
@@ -100,6 +104,11 @@
     width: 120%;
     height: 120%;
   }
+
+  @media (max-width: 500px) {
+    width: 150%;
+    height: 160%;
+  }
 }
 
 .pr-page-right-wrap {
@@ -108,6 +117,10 @@
   align-items: start;
   flex-direction: column;
   justify-content: left;
+
+  @media (max-width: 500px) {
+    width: 100%;
+  }
 }
 
 .pr-page-r-head {
@@ -133,6 +146,10 @@
   justify-content: center;
   align-items: center;
   margin-left: 20px;
+
+  @media (max-width: 500px) {
+    text-align: left;
+  }
 }
 
 .pr-page-r-ft-i-ft {
@@ -162,6 +179,12 @@
   width: 50%;
   display: flex;
   gap: 10px;
+
+  @media (max-width: 500px) {
+    flex-direction: column;
+    text-align: left;
+    margin-left: 30px;
+  }
 }
 
 .pr-page-r-icons {
