--- a/src/pages/about/AboutEdu.scss
+++ b/src/pages/about/AboutEdu.scss
@@ -14,6 +14,7 @@
   text-align: center;
   background-color: #e63946;
   padding: 0px 10px;
+  overflow-x: hidden;
 
   @media (max-width: 500px) {
     height: 100%;
